--- a/ListViewDemo/AndroidManifest.xml
+++ b/ListViewDemo/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wistron.swpc.commonlib.listviewdemo"
+    package="com.xmagicj.git.standardlist"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="9" />
+        android:targetSdkVersion="10" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.wistron.swpc.commonlib.listviewdemo.ListViewActivity"
+            android:name=".ListViewActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
